<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.android.miwok.Userregistration"
    android:weightSum="1">
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_username"
            style="@style/CategoryStyle1" />

        <!-- Input fields -->
        <!-- Name field -->
        <EditText
                android:id="@+id/edit_user_name"
                android:hint="@string/hint_user_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_email"
            style="@style/CategoryStyle1" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_email"
            android:hint="@string/hint_email"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_password"
            style="@style/CategoryStyle1" />

        <!-- Input fields -->
        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/hint_password"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:layout_marginLeft="250dp"
        android:text="OK"
        android:onClick="saveInfo"/>


</LinearLayout>
